Part_1/Log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: writer-reader-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writer-reader
  template:
    metadata:
      labels:
        app: writer-reader
    spec:
      volumes: # Define volume
        - name: shared-timestamp
          emptyDir: {}
      containers:
        - name: log-writer
          image: mlipsan/log-output-writer:1.10
          volumeMounts: # Mount volume
          - name: shared-timestamp
            mountPath: /usr/src/app/files
        - name: log-reader
          image: mlipsan/log-output-reader:1.10
          volumeMounts: # Mount volume
          - name: shared-timestamp
            mountPath: /usr/src/app/files
